...
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{reminderDataItem.title}"
                android:textSize="@dimen/text_size_large"
                tools:text="Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{reminderDataItem.description}"
...
